# llm-observability-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cloptima_llm_observability/: __init__.py  client.py
examples/: gemini_basic.py  mapped_extractor.py  multimodal_tokens.py  otlp_basic.py  workflow_context.py
llm-observability-fixtures/: provider_usage_replay.json
tests/: test_client.py
