[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloptima-llm-observability"
version = "0.2.0"
description = "LLM usage telemetry SDK for Cloptima reporting, attribution, and analytics"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Cloptima", email = "support@cloptima.ai" },
]
dependencies = []
keywords = ["cloptima", "llm", "observability", "telemetry", "finops", "otlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
httpx = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/cloptima/cloptima-llm-observability-python#readme"
Repository = "https://github.com/cloptima/cloptima-llm-observability-python"
Issues = "https://github.com/cloptima/cloptima-llm-observability-python/issues"
Documentation = "https://github.com/cloptima/cloptima-llm-observability-python/tree/main/examples"
Changelog = "https://github.com/cloptima/cloptima-llm-observability-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cloptima_llm_observability*"]
